--- a/index.html
+++ b/index.html
@@ -13,14 +13,26 @@
         <nav class="navbar bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="./assets/img/Logo Cafeteria.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                <img src="../Desafio-1/assets/img/Logo Cafeteria.png" width="30" height="24" class="d-inline-block align-text-top">
                 Blucafe
               </a>
             </div>
           </nav>
     </header>
     <main>
-        <h1></h1>
+        <h1><button onclick="function elegircafe() ;">Comprar</button></h1>
+        <div>
+            <h3>Cafe Con Leche</h3>
+            <button id="compra">Comprar</button>
+        </div>
+       <div>
+           <h3>Cafe Negro</h3>
+            <button id="negro">Comprar</button>
+        </div>
+        <div>
+            <h3>Cafe con Chocolate</h3>
+        <button id="chocolate">Comprar</button>
+        </div>
     </main>
     <footer>
         <footer class="pie-de-pagina">
@@ -57,7 +69,7 @@
         </footer>
     </footer>
 
-    <script src="./assets/main.js"></script>
+    <script src="./assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
 </body>
 </html>
