agregando dom y local storage

--- a/index.html
+++ b/index.html
@@ -12,27 +12,31 @@
     <header>
         <nav class="navbar bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img src="../Desafio-1/assets/img/Logo Cafeteria.png" width="30" height="24" class="d-inline-block align-text-top">
+              <a id="navbar-brand" href="index.html">
+                <img src="./assets/img/Logo Cafeteria.png" width="30" height="24" class="d-inline-block align-text-top">
                 Blucafe
               </a>
             </div>
-          </nav>
+          </nav>    
     </header>
-    <main>
-        <h1><button onclick="function elegircafe() ;">Comprar</button></h1>
-        <div>
+    <main class="d-flex m-20">
+        
+        <div >
             <h3>Cafe Con Leche</h3>
+            <img src="./assets/img/cafeconleche.jpg" width="300" height="150" class="d-inline-block align-text-top">
             <button id="compra">Comprar</button>
         </div>
        <div>
            <h3>Cafe Negro</h3>
+           <img src="./assets/img/cafenegro.jpg" width="300" height="150" class="d-inline-block align-text-top">
             <button id="negro">Comprar</button>
         </div>
         <div>
             <h3>Cafe con Chocolate</h3>
+            <img src="./assets/img/cafeconchocolate.jpg" width="300" height="150" class="d-inline-block align-text-top m-20">
         <button id="chocolate">Comprar</button>
         </div>
+        
     </main>
     <footer>
         <footer class="pie-de-pagina">
