--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Blucafe</title>
     <link rel="stylesheet" href="./assets/style.css">
     <script src="https://kit.fontawesome.com/5aadf441d1.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav class="navbar bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid ">
               <a id="navbar-brand" href="index.html">
-                <img src="./assets/img/Logo Cafeteria.png" width="30" height="24" class="d-inline-block align-text-top">
-                Blucafe
+                <img src="./assets/img/BLU_Logo_FINAL-01-02.jpg" width="50" height="30" class="d-inline-block align-text-top m-2">
+                Blucafe 
               </a>
             </div>
           </nav>    
@@ -32,21 +33,24 @@
                 <div class="box">
                   <figure>
                     <a href="#">
-                        <img src="./assets/img/Logo Cafeteria.png" alt="main-logo">
+                        <img src="./assets/img/BLU_Logo_FINAL-01-01.jpg" alt="main-logo">
                     </a>
                 </figure> 
                    
                 </div>
                 <div class="box">
                     <h2>BLUCAFE</h2>
-                    <p>Somos una Cafeteria De Especialidad.
+                    <p>Cafetería de Especialidad<br>
+                        Martes a viernes 8:30 a 19hs<br>
+                        Sabado y domingo 9 a 19:30 hs<br>
+                        Pet friendly 🐶💙
                     <p></p>
                 </div>
                 <div class="box">
                     <h2>SIGUENOS</h2>
                     <div class="red-social">
                         <a href="https://facebook.com" class="fa fa-facebook"></a>
-                        <a href="https://instagram.com" class="fa fa-instagram"></a>
+                        <a href="https://www.instagram.com/blucafe.sanisidro/" class="fa fa-instagram"></a>
                         <a href="https://twitter.com" class="fa fa-twitter"></a>
                         <a href="https://youtube.com" class="fa fa-youtube"></a>
                     </div>
@@ -62,6 +66,8 @@
     </footer>
 
     <script src="./assets/js/main.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> 
 </body>
 </html>
